--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,44 @@
-.App {
-  text-align: center;
+.container{
+    background: lightgrey;
+    height: 70vh;
+    width: 70vw;
+    margin: auto;
+    border: 1px solid black;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.ResultContainer{
+    background: lightgrey;
+    height: 50%;
+    width: 50%;
+    margin: auto;
+    display: flex;
+    border: 1px solid black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.UserScore, .LocalScore, .LocalOutput{
+    height: 20%;
+    width: 20%;
+    margin: auto;
+    margin-top: 5%;
+    border: 0.4px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+.RPSContainer {
+    height: 48%;
+    width: 80%;
+    border: 0.4px solid black;
+    margin: auto;
+    display: flex;
+    align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.rock, .paper, .scissors {
+    height: 20%;
+    width: 20%;
+    margin-top: 5%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 0.4px solid black;
 }
