--- a/src/App.css
+++ b/src/App.css
@@ -11,14 +11,31 @@
     height: 50%;
     width: 50%;
     margin: auto;
+}
+
+.num {
+    height: 50%;
+    width: 100%;
+    margin: auto;
     display: flex;
-    border: 1px solid black;
+}
+
+.WL {
+    height: 50%;
+    width: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .UserScore, .LocalScore, .LocalOutput{
-    height: 20%;
-    width: 20%;
+    height: 30%;
+    width: 30%;
     margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 5%;
     border: 0.4px solid black;
 }
@@ -26,19 +43,17 @@
 .RPSContainer {
     height: 48%;
     width: 80%;
-    border: 0.4px solid black;
     margin: auto;
     display: flex;
     align-items: center;
 }
 
 .rock, .paper, .scissors {
-    height: 20%;
-    width: 20%;
+    height: 30%;
+    width: 30%;
     margin-top: 5%;
     margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 0.4px solid black;
 }
